--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,11 @@
 *.tar.gz
 *.rar
 
+#compilaciones de maven
+/target/*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/java/build/netbeansANT/nbproject/private/
+/java/build/netbeansANT/build/
+/java/build/netbeansANT/dist/
