chore: ejemplos de switch

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ java/primitivos/.settings/org.eclipse.jdt.core.prefs
 java/primitivos/.project
 java/primitivos/.gitignore
 java/primitivos/.classpath
+java/Nueva carpeta/bin/.project
+java/Nueva carpeta/.project
